[gd_scene load_steps=4 format=3 uid="uid://cwkrtmxcbmjj"]

[ext_resource type="Script" uid="uid://qvr3qt4wg1xj" path="res://entities/weapons/weapon_base.gd" id="1_oja17"]
[ext_resource type="PackedScene" uid="uid://dy1jlyppesfcx" path="res://entities/projectiles/projectile_base.tscn" id="2_fqvw3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i2f88"]
radius = 117.004

[node name="WeaponBase" type="Area2D"]
texture_filter = 1
texture_repeat = 1
script = ExtResource("1_oja17")
projectile = ExtResource("2_fqvw3")

[node name="ShootPosition" type="Marker2D" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_i2f88")

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
